--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -102,4 +102,13 @@
         "valarray": "cpp",
         "variant": "cpp"
     },
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        ".",
+        "-p",
+        "*test.py"
+    ],
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": true,
 }
